Fixed width to prevent horizontal overflow

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -88,7 +88,7 @@ p {
 .group {
   text-align: justify;
   padding: 30px;
-  width: 100%;
+  width: 96%;
   height: 100%;
 }
 
